Update default Japanese prompt text

--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
     <div class="topbar-row">
       <div class="controls">
         <div class="input-stack">
-          <textarea id="input" placeholder="Type something bold. Line breaks are allowed.">Make it bold.
-Make it unforgettable.</textarea>
+          <textarea id="input" placeholder="Type something bold. Line breaks are allowed.">なにかお困りですか？
+お手伝いしましょうか？</textarea>
           <div class="edit-actions">
             <button id="btnView" type="button">View</button>
           </div>
